# visaosetorialsucro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: coleta-diaria.yml
app/: Home.py  main.py
app/.streamlit/: config.toml
app/pages/: 10_Minha_conta.py  11_Administracao.py  12_Raio_X.py  1_Visao_executiva.py  2_Indicadores.py  3_Mercado.py  4_Precos.py  5_Empresas.py  6_Clima.py  7_Safra.py  8_Saude_dos_dados.py  9_Anotacoes.py
assets/geo/: br_estados.geojson
config/: settings.py
db/migrations/: 0001_init.sql  0002_news_filters.sql  0003_indicator_flags.sql  0004_rainfall.sql  0005_company_metrics.sql  0006_safra_uf.sql  0007_metricas_uf.sql  0008_anotacoes.sql  0009_usuarios.sql  0011_depara.sql  (+9 more)
docs/: INSTALACAO.md  LIGAR_AGORA.md  SUPABASE.md
jobs/: run_daily.py  setup_cloud.py
src/: anotacoes.py  app_auth.py  carteira_noticias.py  catalog.py  clima_visual.py  contas.py  depara.py  formato.py  indicadores_visual.py  mercado_visual.py  raiox.py  raiox_abas.py  raiox_exemplo.py  raiox_visual.py  safra_visual.py  theme.py
tests/: conftest.py  test_anotacoes.py  test_anp.py  test_bcb_macro.py  test_carteira_noticias.py  test_catalog.py  test_cbio.py  test_chuva.py  test_chuva_previsao.py  test_comex.py  test_conab.py  test_contas.py  test_cotacoes_intl.py  test_cvm.py  test_depara.py  test_freshness.py  test_idempotent.py  test_mercado_intel.py  test_news_filter.py  test_paridade.py  test_ptax.py  test_raiox.py  test_raiox_abas.py  test_release_reader.py  test_rss.py  test_setor.py  test_sugar_intel_csv.py
(+31 files in other folders)
